<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/edit_location_popup_bgcolor">

    <EditText
        android:id="@+id/location_text"
        android:text="@string/location_text_view_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/submit_location_button"
            android:layout_margin="20dp"
            android:text="@string/submit_location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/use_current_location_button"
            android:text="@string/use_current_location_text"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</RelativeLayout>