<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="andrewbeav.github.io.weathermeme.MainActivity">

    <ImageView
        android:id="@+id/memeView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/main_image"
    />

    <TextView
        android:id="@+id/cityNameView"
        android:layout_below="@+id/memeView"
        android:text="@string/city_default_text"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/refresh_button"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/cityNameView"
        android:text="@string/refresh_button_text"
        android:onClick="refreshWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <GridLayout
        android:id="@+id/weather_info_layout"
        android:layout_below="@+id/refresh_button"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/temp_text"
            android:text="@string/temp_default"
            android:textSize="20dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />
        <TextView
            android:id="@+id/humidity_text"
            android:text="@string/humidity_default"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />

        <TextView
            android:id="@+id/wind_text"
            android:text="@string/wind_default"
            android:textSize="20dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />
        <TextView
            android:id="@+id/weather_description_text"
            android:text="@string/weather_description_default"
            android:textSize="20dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />
    </GridLayout>
</RelativeLayout>
